fix label wrapping problem

--- a/FrontEnd/src/app/components/thumbnail/thumbnail.component.css
+++ b/FrontEnd/src/app/components/thumbnail/thumbnail.component.css
@@ -1,5 +1,4 @@
 .wrapper {
-	margin-right: 5px;
 	position: relative;
 	cursor: pointer;
 }
